turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:4: error: not found: value pi
    droite(5*pi)
             ^